--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,41 @@
+*{
+  text-align: center;
+  font-family: "Helvetica";
+}
 
+h1{
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+.header{
+  background-image: url("../../images/the-flatiron-building.png");
+}
+a{
+  font-size: 18px;
+  color: white;
+}
+h3{
+  font-size: 32px;
+  font-weight: bold;
+}
+h4{
+  font-size: 23px;
+  font-weight: bold;
+}
+p{
+  font-size: 14px;
+}
+#footer p{
+  text-align: left;
+  background-color: dimgray;
+  font-size: 11px;
+  color: white;
+}
+#footer a{
+  text-align: left;
+}
+#midbanner{
+  color: white;
+  background-image: url("../../images/the-flatiron-building.png");
+}
